# pybullet-rl-examples

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
gym_pybullet_drones/assets/: add_gif.py
gym_pybullet_drones/examples/: 3.11_test.py  3.12_test_v2.py  3.13_test.py  3.17_test_v2.py  3.18_test.py  3.20_test.py  4.16_test.py  4.1_test.py  4.3_test.py  4.8_test.py  examples - 快捷方式.lnk  marl_env.py  mission_v1.py  mission_v2.py  mission_v3.py  tactical_test_v1.1.py  tactical_test_v1.2.py  tactical_test_v1.3.py  tactical_test_v1.6.py  tactical_test_v2.0.py  tactical_test_v3.0.py  tactical_test_v4.0.py  tactical_test_v4.2.py  test_marl.py  train_marl.py  vec_normalize#3.12_test.pkl  vec_normalize#3.12_test_v2.pkl  vec_normalize_RL_v1.pkl  vec_normalize_curriculum_v1.pkl  vec_normalize_lidar_v1.pkl  vec_normalize_lidar_v2.pkl  vec_normalize_vision_v1.pkl  vec_normalize_vision_v2.pkl  vec_normalize_vision_v3.pkl  vec_normalize_vision_v4.pkl  vec_normalize_vision_v5.pkl  vec_normalize_vision_v6.pkl  vec_normalize_vision_v7.pkl  vec_normalize_vision_v8.pkl  vec_normalize_vision_v9.pkl
gym_pybullet_drones/examples/basic/: play.py
gym_pybullet_drones/examples/marl_checkpoints/: rllib_checkpoint.json
gym_pybullet_drones/examples/process/: 3.11_test_v2.py  3.12_test.py  3.14_test.py  3.17_test.py  3.19_test.py  3.31_test.py  4.11_test.py  4.21_test.py  4.23_test.py  4.2_test.py  4.9_test.py  5.11_test.py
gym_pybullet_drones/examples/start/: rl_frame.py  tactical_test_v1.0.py  tactical_test_v1.4.py  tactical_test_v1.5.py  tactical_test_v3.1.py  tactical_test_v3.2.py  (+1 more)
(+70 files in other folders)
