[tool.poetry]s
name = "pybullet-rl-examples"
version = "2.1.0"
description = "PyBullet Gym environments for single and multi-agent reinforcement learning of quadcopter control"
authors = ["Sean Nishimiya <22560063@zju.edu.cn>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/NishimiyaXSean/pybullet-rl-examples"
packages = [
    { include = "gym_pybullet_drones" }
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2"
scipy = "^1.10"
transforms3d = "^0.4.1"
matplotlib = "^3.7"
pytest = ">=7.3,<10.0"
pybullet = "^3.2.5"
gymnasium = "~=1.2"
stable-baselines3 = "^2.0.0"
control = "^0.10.2"
tensorboard = "^2.20.0

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
